[package]
name = "racetime"
version = "0.27.4"
authors = ["Fenhl <fenhl@fenhl.net>"]
edition = "2024"
description = "racetime.gg category bot library"
repository = "https://github.com/fenhl/rust-racetime"
license = "MIT"
keywords = ["gg", "racetimegg", "category", "bot", "chat"]
categories = ["api-bindings"]

[lints.rust]
rust_2018_idioms = "deny"
unsafe_code = "deny"
unused = "deny"
unused_crate_dependencies = "deny"
unused_import_braces = "deny"
unused_qualifications = "deny"
warnings = "deny"

[dependencies]
async-trait = "0.1"
chrono = { version = "0.4", default-features = false, features = ["serde"] }
collect-mac = "0.1"
futures = "0.3"
http = "1"
itertools = "0.14"
lazy-regex = "3"
reqwest = { version = "0.12", default-features = false, features = ["charset", "http2", "json", "macos-system-configuration", "rustls-tls"] }
serde = { version = "1", features = ["derive"] }
serde_json = { package = "serde_json_path_to_error", version = "0.1" }
serde_with = "3"
shlex = "1"
thiserror = "2"
tokio = { version = "1", features = ["macros", "net", "rt", "sync", "time"] }
tokio-tungstenite = { version = "0.27", features = ["rustls-tls-webpki-roots", "url"] }
url = { version = "2", features = ["serde"] }
uuid = { version = "1", features = ["serde", "v4"] }
